--- a/index.html
+++ b/index.html
@@ -1,7 +1,241 @@
 <style>
-  h1 {
-    color: blue;
-  }
+  a:link {}
+
+a:visited {}
+
+a:link:active {}
+
+a:visited:active {}
+
+abbr {}
+
+address {}
+
+area {}
+
+article {}
+
+aside {}
+
+audio {}
+
+b {}
+
+base {}
+
+bdi {}
+
+bdo {}
+
+blockquote {}
+
+body {}
+
+body:focus {}
+
+br {}
+
+button {}
+
+canvas {}
+
+caption {}
+
+cite {}
+
+code {}
+
+col {}
+
+colgroup {}
+
+datalist {}
+
+dd {}
+
+del {}
+
+details {}
+
+dfn {}
+
+dialog {}
+
+div {}
+
+dl {}
+
+dt {}
+
+em {}
+
+embed:focus {}
+
+fieldset {}
+
+figcaption {}
+
+figure {}
+
+footer {}
+
+form {}
+
+h1 {}
+
+h2 {}
+
+h3 {}
+
+h4 {}
+
+h5 {}
+
+h6 {}
+
+head {}
+
+header {}
+
+hr {}
+
+html {}
+
+html:focus {}
+
+i {}
+
+iframe:focus {}
+
+iframe[seamless] {}
+
+img {}
+
+input {}
+
+ins {}
+
+kbd {}
+
+label {}
+
+legend {}
+
+li {}
+
+link {}
+
+main {}
+
+map {}
+
+mark {}
+
+menu {}
+
+menuitem {}
+
+meta {}
+
+meter {}
+
+nav {}
+
+noscript {}
+
+object:focus {}
+
+ol {}
+
+optgroup {}
+
+option {}
+
+output {}
+
+p {}
+
+param {}
+
+picture {}
+
+pre {}
+
+progress {}
+
+q {}
+
+q::before {}
+
+q::after {}
+
+rp {}
+
+rt {}
+
+ruby {}
+
+s {}
+
+samp {}
+
+script {}
+
+section {}
+
+select {}
+
+small {}
+
+source {}
+
+span {}
+
+strike {}
+
+strong {}
+
+style {}
+
+sub {}
+
+summary {}
+
+sup {}
+
+table {}
+
+tbody {}
+
+td {}
+
+template {}
+
+textarea {}
+
+tfoot {}
+
+th {}
+
+thead {}
+
+time {}
+
+title {}
+
+tr {}
+
+track {}
+
+u {}
+
+ul {}
+
+var {}
+
+video {}
+
+wbr {}
 </style>
 
 <h1 id="headings">Headings</h1>
